# shikimori-discord-bot

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
clients/: __init__.py  bot.py  linked_role_client.py  shikimori_client.py
cogs/ctx_commands/: cog.py
cogs/manage_commangs/: cog.py  sync.py
cogs/shiki_commands/: cog.py  views.py
data/: __init__.py  databases.py  datatypes.py  models.py  vault.py
dlr_server/: main.py
